organizing project files, bug fixing

--- a/PuzzleGame3D/Assembly-CSharp.csproj
+++ b/PuzzleGame3D/Assembly-CSharp.csproj
@@ -36,9 +36,8 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\CatcherController.cs" />
      <Compile Include="Assets\Scripts\CubeSpawn.cs" />
-     <Compile Include="Assets\Scripts\DestroyOnClick.cs" />
-     <Compile Include="Assets\Scripts\DestroyOnCollision.cs" />
      <Compile Include="Assets\Scripts\DestroyOnCollisionLimit.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
