--- a/PuzzleGame3D/Assembly-CSharp.csproj
+++ b/PuzzleGame3D/Assembly-CSharp.csproj
@@ -39,6 +39,7 @@
      <Compile Include="Assets\Scripts\CatcherController.cs" />
      <Compile Include="Assets\Scripts\CubeSpawn.cs" />
      <Compile Include="Assets\Scripts\DestroyOnCollisionLimit.cs" />
+     <Compile Include="Assets\Scripts\ScoreController.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
